<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_profile_one">Profile One</string>
<string name="lbl_4hrs_ago">4hrs ago</string>
<string name="msg_we_r_goin_to_c">we r goin to c the lions</string>
<string name="lbl_next">Next</string>
<string name="lbl_johndoe2">\@johndoe</string>
<string name="lbl_follows">Follows</string>
<string name="lbl_messaging">Messaging</string>
<string name="msg_yo_are_you_goi">Yo, are you going to the Jake\u2019s wedding?</string>
<string name="lbl_1_552">1,552</string>
<string name="lbl_abram_levin">Abram Levin</string>
<string name="lbl_jakob_curtis">Jakob Curtis</string>
<string name="lbl_desirae_saris">Desirae Saris</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_dennis_reynolds">Dennis Reynolds</string>
<string name="lbl_socially">Socially</string>
<string name="lbl_2_hrs_ago">2 hrs ago</string>
<string name="msg_hey_how_s_it_g">Hey, how\u2019s it goin?</string>
<string name="msg_hey_i_got_new">hey, i got new memes for you</string>
<string name="lbl_posts">Posts</string>
<string name="lbl_homepage">Homepage</string>
<string name="msg_got_really_took">GoT really took a nose dive huh</string>
<string name="msg_android_tutoria">Android Tutorials</string>
<string name="lbl_splash_vthree">Splash vThree</string>
<string name="lbl_1_1k">1.1K</string>
<string name="lbl_name">Name:</string>
<string name="lbl_profile">Profile</string>
<string name="msg_amir_said_we_d">Amir said we\u2019d be staying over for a while... but ...</string>
<string name="lbl_online">Online</string>
<string name="lbl_marilyn_herwitz">Marilyn Herwitz</string>
<string name="lbl_email">Email:</string>
<string name="lbl_sign_out">SIGN OUT</string>
<string name="lbl_john_doe">John Doe</string>
<string name="lbl_feed">Feed</string>
<string name="lbl_homepage_vtwo">Homepage vTwo</string>
<string name="lbl_128">128</string>
<string name="lbl_charlie_kelly">Charlie Kelly</string>
<string name="lbl_362">362</string>
<string name="lbl_messages">Messages</string>
<string name="lbl_malena_tudi">Malena Tudi</string>
<string name="lbl_followers">Followers</string>
<string name="msg_search_for_cont">Search for contacts</string>
<string name="lbl_35">35</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_profile_two">Profile Two</string>
<string name="lbl_5_2k">5.2K</string>
<string name="msg_see_the_lions_o">see the lions or sea lions? also, is mac there with u??</string>
<string name="lbl_welcome_to">Welcome to</string>
<string name="lbl_splash_vone">Splash vOne</string>
<string name="msg_qwertyuio_gmail">qwertyuio@gmail.com</string>
<string name="lbl_splash_vtwo">Splash vTwo</string>
<string name="msg_write_a_message">Write a message...</string>
<string name="lbl_conversations">Conversations</string>
<string name="lbl_when">when?</string>
<string name="msg_they_are_doing">they are doing a feed thing event at the zoo..</string>
</resources>
