<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="appNavigationVM" type="com.application.app.modules.appnavigation.data.viewmodel.AppNavigationVM"/>
    </data>
    <LinearLayout android:id="@+id/linearGroupAP13"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearAppNavigation"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtAppNavigation"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{appNavigationVM.appNavigationModel.txtAppNavigation}"
                style="@style/txtregular20" tools:text="@string/lbl_app_navigation"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtCheckYourAppsUIFromTheBelowDemoScreensOfYourApp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{appNavigationVM.appNavigationModel.txtCheckYourAppsUIFromTheBelowDemoScreensOfYourApp}"
                style="@style/txtregular16" tools:text="@string/msg_check_your_app"/>
            <View android:background="@color/black_900"
                android:id="@+id/lineLine2"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
        </LinearLayout>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:gravity="center_horizontal"
            android:id="@+id/scrollViewGroupAP12"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearGroupAP11"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700">
                <LinearLayout android:id="@+id/linearSplashVThree"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtSplashVThree"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtSplashVThree}"
                        style="@style/txtregular20" tools:text="@string/lbl_splash_vthree"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine3"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearSplashVTwo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtSplashVTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtSplashVTwo}"
                        style="@style/txtregular20" tools:text="@string/lbl_splash_vtwo"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine4"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearProfile"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtProfile"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtProfile}"
                        style="@style/txtregular20" tools:text="@string/lbl_profile"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine5"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearHomepage"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtHomepage"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtHomepage}"
                        style="@style/txtregular20" tools:text="@string/lbl_homepage"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine6"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearHomepageVTwo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtHomepageVTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtHomepageVTwo}"
                        style="@style/txtregular20" tools:text="@string/lbl_homepage_vtwo"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine7"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearConversations"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtConversations"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtConversations}"
                        style="@style/txtregular20" tools:text="@string/lbl_conversations"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine8"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearMessaging"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtMessaging"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtMessaging}"
                        style="@style/txtregular20" tools:text="@string/lbl_messaging"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine9"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearProfileTwo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtProfileTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtProfileTwo}"
                        style="@style/txtregular20" tools:text="@string/lbl_profile_two"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine10"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearProfileOne"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtProfileOne"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtProfileOne}"
                        style="@style/txtregular20" tools:text="@string/lbl_profile_one"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine11"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearSplashVOne"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtSplashVOne"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtSplashVOne}"
                        style="@style/txtregular20" tools:text="@string/lbl_splash_vone"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine12"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
