<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="splashVthreeVM" type="com.application.app.modules.splashvthree.data.viewmodel.SplashVthreeVM"/>
    </data>
    <FrameLayout android:id="@+id/frameSplashvThree"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageComponentOne"
            android:layout_gravity="bottom|end"
            android:layout_height="@dimen/_256pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="@dimen/_265pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_component1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_component1"/>
        <FrameLayout android:id="@+id/frameStackbg"
            android:layout_gravity="top|start"
            android:layout_height="@dimen/_758pxv"
            android:layout_marginBottom="@dimen/_10pxv" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageBg"
                android:layout_gravity="start"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="fitXY" imageRes="@{@drawable/img_bg}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_bg"/>
            <LinearLayout android:id="@+id/linearColumnwelcometo"
                android:layout_gravity="bottom|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_26pxv"
                android:layout_marginEnd="@dimen/_22pxh"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtWelcometo"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_100pxh"
                    android:layout_marginStart="@dimen/_100pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{splashVthreeVM.splashVthreeModel.txtWelcometo}"
                    style="@style/txtPoppinsregular16" tools:text="@string/lbl_welcome_to"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtSocially"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_69pxh"
                    android:layout_marginStart="@dimen/_69pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{splashVthreeVM.splashVthreeModel.txtSocially}"
                    style="@style/txtPoppinsbold39" tools:text="@string/lbl_socially"/>
                <ImageView android:gravity="start"
                    android:id="@+id/imageFrame"
                    android:layout_height="@dimen/_213pxh"
                    android:layout_marginTop="@dimen/_52pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_frame"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_frame"/>
                <LinearLayout android:gravity="end"
                    android:id="@+id/linearRownext"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_marginTop="@dimen/_255pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtNext"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.73"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{splashVthreeVM.splashVthreeModel.txtNext}"
                        style="@style/txtPoppinsregular20" tools:text="@string/lbl_next"/>
                    <ImageView android:id="@+id/imageArrowright"
                        android:layout_height="@dimen/_16pxh"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_marginStart="@dimen/_15pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_16pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowright"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</layout>
